chore(config): 보안 및 실행 프로필 설정 정리